k8sec-acg/network-policy/allowclient-access-pod.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-client-access
  namespace: anyname
spec:
  podSelector:
    matchLabels:
      app: db-client
  ingress:
    - from: []
