k8sec-acg/network-policy/allowdb-access-pod.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: anyname
  name: allowedaccess
spec:
  podSelector:
    matchLabels:
      app: db-server
  ingress: 
    - from:
      - podSelector:
          matchLabels:
            app: db-client
      ports:
        - protocol: TCP
          port: 5432
