k8sec-acg/network-policy/noaccess-pod.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: noaccess
  namespace: anyname
spec:
  podSelector: []
  policyTypes:
    - Ingress
    - Egress
